# whisper

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt  setup.sh
