[project]
name = "whisper-transcriber"
version = "1.0.0"
description = "WhisperX Audio Transcription with Speaker Diarization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "whisperx",
    "gradio>=4.0.0",
    "ffmpeg-python>=0.2.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
whisperx = { git = "https://github.com/m-bain/whisperx.git" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources.torch]
index = "pytorch-cpu"

[tool.uv.sources.torchaudio]
index = "pytorch-cpu"
