[project]
name = "whisper-transcriber"
version = "1.0.0"
description = "WhisperX Audio Transcription with Speaker Diarization"
authors = [
    { name = "Jason Olinger", email = "whisper_transcriber@fastmail.com" }
]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "whisperx",
    "gradio>=4.0.0",
    "ffmpeg-python>=0.2.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[tool.uv.sources]
whisperx = { git = "https://github.com/m-bain/whisperx.git" }
